add dashboard landingpage

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dooh Mtaani</title>
     <link
       rel="stylesheet"
@@ -28,8 +28,85 @@
       crossorigin="anonymous"
     ></script>
     <script src="js/scripts.js"></script>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="page-wrapper">
+      <!-- <div class="row"> -->
+      <div class="side-bar">
+        <div class="input-group mb-3">
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Search chama..."
+          />
+          <div class="input-group-append">
+            <button class="btn btn-search" type="button">
+              <i class="fa fa-search"></i>
+            </button>
+          </div>
+        </div>
+        <div class="available-chamas">
+          <h6>Available Chamas</h6>
+          <ul>
+            <li>#kesterspecial</li>
+            <li>#karoibangi-2013</li>
+            <li>#wazeewamtaa</li>
+            <li>#lorem234leo</li>
+            <li>#mscodinghustlers</li>
+          </ul>
+        </div>
+        <div class="Your-chamas">
+          <h6>Available Chamas</h6>
+          <ul>
+            <li>Yet to join a chama</li>
+          </ul>
+        </div>
+      </div>
+      <div class="middle-section">
+        <div class="status-bar">
+          <div class="selected-chama"></div>
+          <div class="user-profile-pic">
+            <a href="#"
+              ><img src="images/profile.png" alt="profile picture"
+            /></a>
+          </div>
+        </div>
+        <div class="middle-section_content">
+          <div class="menu-bar">
+            <ul>
+              <li>Dashboard</li>
+              <li>New Chama</li>
+              <li>Contribute</li>
+              <li>Settings</li>
+            </ul>
+          </div>
+          <div class="content">
+            <div class="content__wrapper">
+              <p>Welcome John Doe,</p>
+              <p>
+                You are a visionary! By joining <strong><em>Dooh mtaani</em></strong>, you get an
+                opportunity to build your future by contributing both as a member
+                and or a leader of your chama.
+              </p>
+              <p>
+                <strong><em>Dooh mtaani</em></strong> gives a formal structure for your chama to
+                professionally manage member funds while efficiently tracking
+                individual member contributions.
+              </p>
+              <p>
+                You are currently not enrolled in any chama. To make full use of
+                <strong><em>Dooh mtaani</em></strong> you could;
+              </p>
+              <ul>
+                <li>Join an existing chama or</li>
+                <li>Create and invite members that share your vision.</li>
+              </ul>
+              <p>We look forward to being your partner...</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- </div> -->
+    </div>
+  </body>
 </html>
