--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </head>
 
   <body>
-    <div class="landingpage vh-100">
+    <div class="landingpage vh-100 hide-div">
       <div class="container-fluid">
         <div class="background">
           <!-- <div class="navbar">
@@ -63,7 +63,7 @@
       </div>
     </div>
 
-    <div class="main-content hide-div">
+    <div class="main-content">
       <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
           >&times;</a
@@ -99,7 +99,7 @@
       </div>
       <div id="main">
         <div class="status-bar">
-          <div class="selected-chama"></div>
+          <div data-chamaid="" class="selected-chama"></div>
           <div class="user-profile-pic">
             <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
               >&#9776; CHAMA</span
@@ -190,17 +190,7 @@
                     <div class="sub-settings-header">
                       <h6>Chama profile</h6>
                     </div>
-                    <div class="sub-settings-content">
-                      <!-- <ul>
-                        <li>Name: <span>Jiwezeshe</span></li>
-                        <li>County: <span>Nairobi</span></li>
-                        <li>Town: <span>Ngara</span></li>
-                        <li>Nature: <span>Self-help</span></li>
-                        <li>Vision: <span>Financial inclusion</span></li>
-                        <li>Contribution frequency: <span>Weekly</span></li>
-                        <li>Amount: <span>200 ksh</span></li>
-                      </ul> -->
-                    </div>
+                    <div class="sub-settings-content"></div>
                   </div>
                   <div class="payments payment-settings hide-div">
                     <div class="sub-settings-header">
@@ -214,11 +204,16 @@
                     <div class="sub-settings-content form hide-div">
                       <form id="add-payment-details">
                         <div class="form-group">
-                          <input
+                          <!-- <input
                             type="text"
                             class="form-control financial-service-provider"
                             placeholder="Financial service provider..."
-                          />
+                          /> -->
+                          <select name="" class="form-control financial-service-provider">
+                            <option value="">Financial service provider...</option>
+                            <option value="safaricom">Safaricom</option>
+                            <option value="airtel">Airtel</option>
+                          </select>
                         </div>
                         <div class="form-group">
                           <input
