--- a/index.html
+++ b/index.html
@@ -31,11 +31,7 @@
   </head>
 
   <body>
-<<<<<<< HEAD
-    <div class="landingpage vh-100 hide-div">
-=======
-    <div class="landingpage vh-100" id="landingpage">
->>>>>>> 7e226e8586fcd453da5979132185ebc6120c9419
+    <div class="landingpage vh-200">
       <div class="container-fluid">
         <div class="background">
           <div class="homepage text-center">
@@ -50,142 +46,159 @@
               as to help member with a personal issue such as a hospital bill
             </p>
 
-            <button type="button" class="btn btn-outline-dark" id="signup-btn">
+            <button
+              data-link="sign-up"
+              type="button"
+              class="btn btn-outline-dark btn-landingpage"
+              id="signup-btn"
+            >
               sign up
             </button>
 
             <button
+              data-link="sign-in"
               type="button"
-              class="btn btn-outline-primary"
+              class="btn btn-outline-primary btn-landingpage"
               id="login-btn"
             >
               log in
             </button>
 
             <h5 id="errorfirstname"></h5>
-            <form class="mt-3" id="signup">
-              <div class="row mb-2">
-                <div class="col-md-6">
-                  <input
-                    type="text"
-                    class="form-control"
-                    placeholder="First name"
-                    id="firstname"
-                    aria-label="First name"
-                  />
+            <div class="sign-up hide-div show">
+              <form class="mt-3" id="signup">
+                <div class="row mb-2">
+                  <div class="col-md-3">
+                    <div class="form-group">
+                      <select name="" class="form-control title">
+                        <option value="">Title</option>
+                        <option value="Mr">Mr</option>
+                        <option value="Ms">Ms</option>
+                      </select>
+                    </div>
+                  </div>
+                  <div class="col-md-3">
+                    <div class="form-group">
+                      <input
+                        type="text"
+                        class="form-control firstname"
+                        placeholder="First name"
+                      />
+                    </div>
+                  </div>
+                  <div class="col-md-3">
+                    <div class="form-group">
+                      <input
+                        type="text"
+                        class="form-control middlename"
+                        placeholder="Middle name"
+                      />
+                    </div>
+                  </div>
+                  <div class="col-md-3">
+                    <input
+                      type="text"
+                      class="form-control lastname"
+                      placeholder="Last name"
+                    />
+                  </div>
                 </div>
-
-                <div class="col-md-6">
-                  <input
-                    type="text"
-                    class="form-control"
-                    placeholder="Last name"
-                    id="lastname"
-                    aria-label="Last name"
-                  />
+                <div class="row mb-2">
+                  <div class="col-md-4">
+                    <div class="form-group">
+                      <select name="" class="form-control gender">
+                        <option value="">Gender</option>
+                        <option value="Female">Female</option>
+                        <option value="Male">Male</option>
+                      </select>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="form-group">
+                      <input
+                        type="text"
+                        class="form-control phonenumber"
+                        placeholder="Phone Number"
+                      />
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="form-group">
+                      <input
+                        type="text"
+                        class="form-control id-number"
+                        placeholder="ID Number"
+                      />
+                    </div>
+                  </div>
                 </div>
-              </div>
-              <div class="row mb-2">
-                <div class="col-md-6">
-                  <input
-                    type="number"
-                    class="form-control"
-                    placeholder="Phone Number"
-                    id="phonenumber"
-                    aria-label="Phone Number"
-                  />
-                </div>
-                <div class="col-md-6">
-                  <input
-                    type="email"
-                    class="form-control"
-                    placeholder="Email Address"
-                    id="email"
-                    aria-label="Email"
-                  />
-                </div>
-              </div>
-              <div class="row mb-2">
-                <div class="col-md-6">
-                  <input
-                    type="number"
-                    class="form-control"
-                    placeholder="ID Number"
-                    id="numid"
-                    aria-label="ID Number"
-                  />
-                </div>
-                <div class="col-md-6">
-                  <input
-                    type="text"
-                    class="form-control"
-                    placeholder="UserName"
-                    id="username"
-                    aria-label="UserName"
-                  />
-                </div>
-              </div>
-              <div class="row mb-2">
-                <div class="col-md-6">
-                  <input
-                    type="text"
-                    class="form-control"
-                    placeholder=" New Password"
-                    id="newpass"
-                    aria-label="Password"
-                  />
-                </div>
-                <div class="col-md-6">
-                  <input
-                    type="text"
-                    class="form-control"
-                    placeholder="Confirm Password"
-                    id="conpass"
-                    aria-label="password"
-                  />
-                </div>
-              </div>
-              <button type="submit" class="btn btn-success" id="submit-btn">
-                submit
-              </button>
-            </form>
-            <fieldset class="mt-3" id="login">
-              <form>
                 <div class="row mb-2">
                   <div class="col-md-6">
-                    <input
-                      type="text"
-                      class="form-control logindetails"
-                      placeholder="UserName"
-                      id="usnum"
-                      aria-label="UserName"
-                    />
+                    <div class="form-group">
+                      <input
+                        type="email"
+                        class="form-control email"
+                        placeholder="Email Address"
+                        id="email"
+                        aria-label="Email"
+                      />
+                    </div>
                   </div>
                   <div class="col-md-6">
-                    <input
-                      type="text"
-                      class="form-control logindetails"
-                      placeholder=" Password"
-                      id="pwd"
-                      aria-label="password"
-                    />
+                    <div class="form-group">
+                      <input
+                        type="password"
+                        class="form-control password"
+                        placeholder=" New Password"
+                        id="newpass"
+                        aria-label="Password"
+                      />
+                    </div>
                   </div>
                 </div>
-                <button type="submit" class="btn btn-primary m-3" id="loginbtn">
-                  login
+                <button type="submit" class="btn btn-success" id="submit-btn">
+                  submit
                 </button>
               </form>
-            </fieldset>
+            </div>
+            <div class="sign-in hide-div">
+              <fieldset class="mt-3" id="login">
+                <form>
+                  <div class="row mb-2">
+                    <div class="col-md-6">
+                      <input
+                        type="text"
+                        class="form-control logindetails"
+                        placeholder="UserName"
+                        id="usnum"
+                        aria-label="UserName"
+                      />
+                    </div>
+                    <div class="col-md-6">
+                      <input
+                        type="text"
+                        class="form-control logindetails"
+                        placeholder=" Password"
+                        id="pwd"
+                        aria-label="password"
+                      />
+                    </div>
+                  </div>
+                  <button
+                    type="submit"
+                    class="btn btn-primary m-3"
+                    id="loginbtn"
+                  >
+                    login
+                  </button>
+                </form>
+              </fieldset>
+            </div>
           </div>
         </div>
       </div>
     </div>
-
-<<<<<<< HEAD
-    <div class="main-content">
-=======
-    <div class="main-content hide-div" id="maincontent">
->>>>>>> 7e226e8586fcd453da5979132185ebc6120c9419
+    <div class="main-content hide-div">
       <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
           >&times;</a
@@ -221,11 +234,16 @@
       </div>
       <div id="main">
         <div class="status-bar">
-          <div data-chamaid="" class="selected-chama"></div>
-          <div class="user-profile-pic">
-            <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
-              >&#9776; CHAMA</span
-            >
+          <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
+            >&#9776; CHAMA</span
+          >
+          <div
+            data-selectedchamaid=""
+            data-selectedchamaname=""
+            class="selected-chama-details hide-div"
+          ></div>
+          <div class="current-user">
+            <span class="current-user__name"> </span>
             <a href="#"
               ><img src="images/profile.png" alt="profile picture"
             /></a>
@@ -272,7 +290,7 @@
           <div class="content">
             <div class="content__wrapper">
               <div class="welcome">
-                <p>Welcome John Doe,</p>
+                <p>Welcome <span class="user-name">John Doe</span>,</p>
                 <p>
                   You are a visionary! By joining
                   <strong><em>Dooh mtaani</em></strong
@@ -319,20 +337,20 @@
                       <h6>Payment details</h6>
                     </div>
                     <div class="sub-settings-content info">
-                      <p>Make contributions to:</p>
+                      <!-- <p>Make contributions to:</p>
                       <p>Paybill#: <span>908709</span></p>
-                      <p>Account #: <span>"your phone number"</span></p>
+                      <p>Account #: <span>"your phone number"</span></p> -->
                     </div>
                     <div class="sub-settings-content form hide-div">
                       <form id="add-payment-details">
                         <div class="form-group">
-                          <!-- <input
-                            type="text"
+                          <select
+                            name=""
                             class="form-control financial-service-provider"
-                            placeholder="Financial service provider..."
-                          /> -->
-                          <select name="" class="form-control financial-service-provider">
-                            <option value="">Financial service provider...</option>
+                          >
+                            <option value="">
+                              Financial service provider...
+                            </option>
                             <option value="safaricom">Safaricom</option>
                             <option value="airtel">Airtel</option>
                           </select>
@@ -442,12 +460,7 @@
                 </div>
               </div>
               <div class="contribute hide-div">
-                <div class="contribute__container">
-                  <p>Member Name: <span>John Doe</span></p>
-                  <p>Phone no: <span>0719 000 000</span></p>
-                  <p><span>Weekly contribution</span>: <span>200 ksh</span></p>
-                  <button type="button">Push to mpesa</button>
-                </div>
+                <div class="contribute__container"></div>
               </div>
               <div class="new-chama hide-div">
                 <div class="new-chama__container">
@@ -494,8 +507,6 @@
                         </div>
                       </div>
                     </div>
-                    <!-- <div class="row">
-                      <div class="col-md"> -->
                     <div class="form-group">
                       <textarea
                         class="form-control vision"
@@ -503,8 +514,6 @@
                         placeholder="Vision..."
                       ></textarea>
                     </div>
-                    <!-- </div>
-                    </div> -->
                     <div class="row">
                       <div class="col-md-6">
                         <div class="form-group">
