--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
               You can also form a chama to collect contributions for cause such
               as to help member with a personal issue such as a hospital bill
             </p>
-
+            <div
+              class="alert hide-alert sign-up-form-alerts"
+              role="alert"
+            ></div>
             <button
               data-link="sign-up"
               type="button"
@@ -163,24 +166,20 @@
             </div>
             <div class="sign-in hide-div">
               <fieldset class="mt-3" id="login">
-                <form>
+                <form id="login">
                   <div class="row mb-2">
                     <div class="col-md-6">
                       <input
-                        type="text"
-                        class="form-control logindetails"
-                        placeholder="UserName"
-                        id="usnum"
-                        aria-label="UserName"
+                        type="email"
+                        class="form-control user-eamil"
+                        placeholder="email"
                       />
                     </div>
                     <div class="col-md-6">
                       <input
-                        type="text"
-                        class="form-control logindetails"
+                        type="password"
+                        class="form-control user-password"
                         placeholder=" Password"
-                        id="pwd"
-                        aria-label="password"
                       />
                     </div>
                   </div>
@@ -226,26 +225,32 @@
           </ul>
         </div>
         <div class="Your-chamas">
-          <h6>Available Chamas</h6>
+          <h6>Your Chamas</h6>
           <ul>
-            <li>Yet to join a chama</li>
+            <!-- <li>Yet to join a chama</li> -->
           </ul>
         </div>
       </div>
       <div id="main">
         <div class="status-bar">
           <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
-            >&#9776; CHAMA</span
+            >&#9776;<span
+              data-selectedchamaid=""
+              data-selectedchamaname=""
+              class="selected-chama-details"
+              >YOUR CHAMA</span
+            ></span
           >
-          <div
+          <!-- <div
             data-selectedchamaid=""
             data-selectedchamaname=""
-            class="selected-chama-details hide-div"
-          ></div>
+            class="selected-chama-details"
+          >
+            YOUR CHAMA
+          </div> -->
           <div class="current-user">
-            <span class="current-user__name"> </span>
-            
             <p>
+              <span class="current-user__name"> </span>
               <input
                 type="file"
                 accept="image/*"
@@ -255,6 +260,7 @@
                 style="display: none"
                 class="form-control sam"
               />
+              <!-- <span class="current-user__name"> </span> -->
             </p>
 
             <p>
@@ -485,18 +491,24 @@
               <div class="new-chama hide-div">
                 <div class="new-chama__container">
                   <form action="" id="add-new-chama">
+                    <div
+                      class="alert hide-alert new-chama-form-alerts"
+                      role="alert"
+                    ></div>
                     <div class="row">
                       <div class="col-md-6">
                         <div class="form-group">
                           <select name="" class="form-control county">
-                            <option selected disabled value="">
+                            <option selected value="">
                               Choose County...
                             </option>
                             <option value="Baringo">Baringo</option>
                             <option value="Bomet">Bomet</option>
                             <option value="Bungoma">Bungoma</option>
                             <option value="Busia">Busia</option>
-                            <option value="Elgeyo-Marakwet">Elgeyo-Marakwet</option>
+                            <option value="Elgeyo-Marakwet">
+                              Elgeyo-Marakwet
+                            </option>
                             <option value="Embu">Embu</option>
                             <option value="Garissa">Garissa</option>
                             <option value="Homa Bay">Homa Bay</option>
@@ -556,7 +568,9 @@
                       <div class="col-md-6">
                         <div class="form-group">
                           <select name="" class="form-control chama-type">
-                            <option selected disabled value="">Choose type...</option>
+                            <option selected value="">
+                              Choose type...
+                            </option>
                             <option value="self-help">Self help</option>
                             <option value="table banking">Table banking</option>
                           </select>
@@ -586,7 +600,9 @@
                             name=""
                             class="form-control contribution-frequency"
                           >
-                            <option selected disabled value="">Select frequency...</option>
+                            <option selected value="">
+                              Select frequency...
+                            </option>
                             <option value="weekly">Weekly</option>
                             <option value="monthly">Monthly</option>
                             <option value="quarterly">Quarterly</option>
