added sing up users using mock api to store data

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </head>
 
   <body>
-    <div class="landingpage vh-100">
+    <div class="landingpage ">
       <div class="container-fluid">
         <div class="background">
           <div class="homepage text-center">
